k8s-aks/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: frontend-ingress 
  namespace: cloud-native-app 
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules: 
    - http: 
        paths:
          - path: /
            pathType: Prefix 
            backend: 
              service: 
                name: frontend-service 
                port: 
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific 
            backend: 
              service: 
                name: backend-service 
                port: 
                  number: 5000
